typo in code address path

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="inter">
 
           <div class="cisco">
-            <img class="cisco-logo" src="Images/interns/cisco.png" alt="cisco">
+            <img class="cisco-logo" src="Images/Interns/cisco.png" alt="cisco">
             <h2>Intern at Cisco Systems</h2>
             <p>As an Intern at Cisco Systems, my project is about using “Decision trees to Analyze a Config File,” where I have
 developed a Framework that validates a config file. Also, I have developed a Memorization-based approach where
@@ -60,7 +60,7 @@ we get a complete analysis of a config file by finding logical errors.
           </div>
 
           <div class="origin">
-            <img class="origin-logo" src="Images/interns/origin.png" alt="origin-health">
+            <img class="origin-logo" src="Images/Interns/origin.png" alt="origin-health">
             <h2>Intern at Origin Health</h2>
             <p>As an Intern at Cisco Systems, my project is about using “Decision trees to Analyze a Config File,” where I have
           developed a Framework that validates a config file. Also, I have developed a Memorization-based approach where
